objects/P360TxMReportFilters__c.object
<CustomObject>
    <fields>
        <fullName>GenericLeadReport__c</fullName>
        <label>GenericLeadReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenericTPReport__c</fullName>
        <label>GenericTPReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead10PlusPAReport__c</fullName>
        <label>Lead10PlusPAReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadChartReport__c</fullName>
        <label>LeadChartReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadDealReport__c</fullName>
        <label>LeadDealReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPChartReport__c</fullName>
        <label>TPChartReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPDealReport__c</fullName>
        <label>TPDealReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSLeadConvertedDeal5Days__c</fullName>
        <label>lvCSLeadConvertedDeal5Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSLeadWaitingAssignment__c</fullName>
        <label>lvCSLeadWaitingAssignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSLeadWaitingReAssignment__c</fullName>
        <label>lvCSLeadWaitingReAssignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSTPExpiringTomorrow__c</fullName>
        <label>lvCSTPExpiringTomorrow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSTPExpiringTwoWeeks__c</fullName>
        <label>lvCSTPExpiringTwoWeeks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lvCSTPWaitingActivation__c</fullName>
        <label>lvCSTPWaitingActivation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSLeadConvertedDeal5Days__c</fullName>
        <label>urlCSLeadConvertedDeal5Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSLeadWaitingAssignment__c</fullName>
        <label>urlCSLeadWaitingAssignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSLeadWaitingReAssignment__c</fullName>
        <label>urlCSLeadWaitingReAssignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSLeadWaitingforPAfor4Days__c</fullName>
        <label>urlCSLeadWaitingforPAfor4Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSLeadWaitingforPSRfor4Days__c</fullName>
        <label>urlCSLeadWaitingforPSRfor4Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSTPDeals5Days__c</fullName>
        <label>urlCSTPDeals5Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSTPExpiringTomorrow__c</fullName>
        <label>urlCSTPExpiringTomorrow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSTPExpiringTwoWeeks2__c</fullName>
        <label>urlCSTPExpiringTwoWeeks2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSTPExpiringTwoWeeks__c</fullName>
        <label>urlCSTPExpiringTwoWeeks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlCSTPWaitingActivation__c</fullName>
        <label>urlCSTPWaitingActivation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlLead10PlusPAReport__c</fullName>
        <label>urlLead10PlusPAReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>P360TxMReportFilters</label>
</CustomObject>